src/widgets/itemviews/qtableview.cpp
@@ -3478,7 +3478,7 @@ void QTableView::currentChanged(const QModelIndex &current, const QModelIndex &p
 {
 #if QT_CONFIG(accessibility)
     if (QAccessible::isActive()) {
-        if (current.isValid()) {
+        if (current.isValid() && hasFocus()) {
             Q_D(QTableView);
             int entry = d->accessibleTable2Index(current);
             QAccessibleEvent event(this, QAccessible::Focus);
